--- a/Examples/Executor/executor.core.cfg
+++ b/Examples/Executor/executor.core.cfg
@@ -1,7 +1,6 @@
 [DEFAULT]
 ConnectionType=acceptor
 SocketAcceptPort=5001
-SocketReuseAddress=Y
 StartTime=00:00:00
 EndTime=00:00:00
 FileLogPath=log
@@ -12,89 +11,91 @@ ResetOnDisconnect=Y
 
 [SESSION]
 BeginString=FIX.4.0
-SenderCompID=SIMPLE
+SenderCompID=EXECUTOR
 TargetCompID=CLIENT1
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX40.xml
+DataDictionary=../../spec/fix/FIX40.xml
 
 [SESSION]
 BeginString=FIX.4.0
-SenderCompID=SIMPLE
+SenderCompID=EXECUTOR
 TargetCompID=CLIENT2
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX40.xml
+DataDictionary=../../spec/fix/FIX40.xml
 
 [SESSION]
 BeginString=FIX.4.1
-SenderCompID=SIMPLE
+SenderCompID=EXECUTOR
 TargetCompID=CLIENT1
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX41.xml
+DataDictionary=../../spec/fix/FIX41.xml
 
 [SESSION]
 BeginString=FIX.4.1
-SenderCompID=SIMPLE
+SenderCompID=EXECUTOR
 TargetCompID=CLIENT2
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX41.xml
+DataDictionary=../../spec/fix/FIX41.xml
 
 [SESSION]
 BeginString=FIX.4.2
-SenderCompID=SIMPLE
+SenderCompID=EXECUTOR
 TargetCompID=CLIENT1
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX42.xml
+DataDictionary=../../spec/fix/FIX42.xml
 
 [SESSION]
 BeginString=FIX.4.2
-SenderCompID=SIMPLE
+SenderCompID=EXECUTOR
 TargetCompID=CLIENT2
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX42.xml
+DataDictionary=../../spec/fix/FIX42.xml
 
 [SESSION]
 BeginString=FIX.4.3
-SenderCompID=SIMPLE
+SenderCompID=EXECUTOR
 TargetCompID=CLIENT1
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX43.xml
+DataDictionary=../../spec/fix/FIX43.xml
 
 [SESSION]
 BeginString=FIX.4.3
-SenderCompID=SIMPLE
+SenderCompID=EXECUTOR
 TargetCompID=CLIENT2
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX43.xml
+DataDictionary=../../spec/fix/FIX43.xml
 
 [SESSION]
 BeginString=FIX.4.4
-SenderCompID=SIMPLE
+SenderCompID=EXECUTOR
 TargetCompID=CLIENT1
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX44.xml
+DataDictionary=../../spec/fix/FIX44.xml
+
+
 
 [SESSION]
 BeginString=FIX.4.4
-SenderCompID=SIMPLE
+SenderCompID=EXECUTOR
 TargetCompID=CLIENT2
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX44.xml
+DataDictionary=../../spec/fix/FIX44.xml
 
 #[SESSION]
 #BeginString=FIXT.1.1
 #DefaultApplVerID=FIX.5.0
-#SenderCompID=SIMPLE
+#SenderCompID=EXECUTOR
 #TargetCompID=CLIENT1
 #FileStorePath=store
-#TransportDataDictionary=../../spec/fix/FIXT11.xml
-#AppDataDictionary=../../../../../spec/fix/FIX50.xml
+#TransportDataDictionary=../spec/fix/FIXT11.xml
+#AppDataDictionary=../spec/fix/FIX50.xml
 
 #[SESSION]
 #BeginString=FIXT.1.1
 #DefaultApplVerID=FIX.5.0
-#SenderCompID=SIMPLE
+#SenderCompID=EXECUTOR
 #TargetCompID=CLIENT2
 #FileStorePath=store
-#TransportDataDictionary=../../spec/fix/FIXT11.xml
-#AppDataDictionary=../../../../../spec/fix/FIX50.xml
+#TransportDataDictionary=../spec/fix/FIXT11.xml
+#AppDataDictionary=../spec/fix/FIX50.xml
 
