--- a/Examples/SimpleAcceptor/simpleacc.core.cfg
+++ b/Examples/SimpleAcceptor/simpleacc.core.cfg
@@ -15,70 +15,70 @@ BeginString=FIX.4.0
 SenderCompID=SIMPLE
 TargetCompID=CLIENT1
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX40.xml
+DataDictionary=../../spec/fix/FIX40.xml
 
 [SESSION]
 BeginString=FIX.4.0
 SenderCompID=SIMPLE
 TargetCompID=CLIENT2
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX40.xml
+DataDictionary=../../spec/fix/FIX40.xml
 
 [SESSION]
 BeginString=FIX.4.1
 SenderCompID=SIMPLE
 TargetCompID=CLIENT1
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX41.xml
+DataDictionary=../../spec/fix/FIX41.xml
 
 [SESSION]
 BeginString=FIX.4.1
 SenderCompID=SIMPLE
 TargetCompID=CLIENT2
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX41.xml
+DataDictionary=../../spec/fix/FIX41.xml
 
 [SESSION]
 BeginString=FIX.4.2
 SenderCompID=SIMPLE
 TargetCompID=CLIENT1
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX42.xml
+DataDictionary=../../spec/fix/FIX42.xml
 
 [SESSION]
 BeginString=FIX.4.2
 SenderCompID=SIMPLE
 TargetCompID=CLIENT2
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX42.xml
+DataDictionary=../../spec/fix/FIX42.xml
 
 [SESSION]
 BeginString=FIX.4.3
 SenderCompID=SIMPLE
 TargetCompID=CLIENT1
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX43.xml
+DataDictionary=../../spec/fix/FIX43.xml
 
 [SESSION]
 BeginString=FIX.4.3
 SenderCompID=SIMPLE
 TargetCompID=CLIENT2
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX43.xml
+DataDictionary=../../spec/fix/FIX43.xml
 
 [SESSION]
 BeginString=FIX.4.4
 SenderCompID=SIMPLE
 TargetCompID=CLIENT1
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX44.xml
+DataDictionary=../../spec/fix/FIX44.xml
 
 [SESSION]
 BeginString=FIX.4.4
 SenderCompID=SIMPLE
 TargetCompID=CLIENT2
 FileStorePath=store
-DataDictionary=../../../../../spec/fix/FIX44.xml
+DataDictionary=../../spec/fix/FIX44.xml
 
 #[SESSION]
 #BeginString=FIXT.1.1
@@ -87,7 +87,7 @@ DataDictionary=../../../../../spec/fix/FIX44.xml
 #TargetCompID=CLIENT1
 #FileStorePath=store
 #TransportDataDictionary=../../spec/fix/FIXT11.xml
-#AppDataDictionary=../../../../../spec/fix/FIX50.xml
+#AppDataDictionary=../../spec/fix/FIX50.xml
 
 #[SESSION]
 #BeginString=FIXT.1.1
@@ -96,5 +96,5 @@ DataDictionary=../../../../../spec/fix/FIX44.xml
 #TargetCompID=CLIENT2
 #FileStorePath=store
 #TransportDataDictionary=../../spec/fix/FIXT11.xml
-#AppDataDictionary=../../../../../spec/fix/FIX50.xml
+#AppDataDictionary=../../spec/fix/FIX50.xml
 
